--- a/signup.html
+++ b/signup.html
@@ -60,6 +60,10 @@
       background-color: hsla(0, 0%, 100%, 0.9) !important;
       backdrop-filter: saturate(200%) blur(25px);
     }
+
+    #signup {
+        color: #fff;
+    }
   </style>
 
   <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
@@ -122,7 +126,7 @@
 
               <!-- Submit button -->
               <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">
-                Sign up
+                <a id="signup" href="index.html">Sign up</a>
               </button>
 
               <!-- Register buttons -->
